--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -55,8 +55,7 @@
         {% endblock %}
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
-                Proudly powered by <a href="https://getpelican.com/">Pelican</a>,
-                which takes great advantage of <a href="https://www.python.org/">Python</a>.
+                este es el footer de la web
                 </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 </body>
