--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -1,7 +1,15 @@
+
+
 <!DOCTYPE html>
 <html lang="{% block html_lang %}{{ DEFAULT_LANG }}{% endblock html_lang %}">
 <head>
         {% block head %}
+
+        
+        {{ super() }}
+               <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/style.css" />
+        
+
         <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
         <meta charset="utf-8" />
         <meta name="generator" content="Pelican" />
@@ -60,3 +68,4 @@
         </footer><!-- /#contentinfo -->
 </body>
 </html>
+
