--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -5,7 +5,7 @@
 <h2>All articles</h2>
 {% endblock %}
 
-<ol id="post-list">
+<!-- <ol id="post-list">
 {% for article in articles_page.object_list %}
         <li><article class="hentry">
                 <header> <h2 class="entry-title"><a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h2> </header>
@@ -20,7 +20,8 @@
                 <div class="entry-content"> {{ article.summary }} </div><!-- /.entry-content -->
         </article></li>
 {% endfor %}
-</ol><!-- /#posts-list -->
+</ol> -->
+<!-- /#posts-list -->
 {% if articles_page.has_other_pages() %}
     {% include 'pagination.html' %}
 {% endif %}
