--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 <section id="content">
-{% block content_title %}
+
+<!-- {% block content_title %}
 <h2>All articles</h2>
-{% endblock %}
+{% endblock %} -->
 
 <!-- <ol id="post-list">
 {% for article in articles_page.object_list %}
