--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 <section id="content">
-
-<!-- {% block content_title %}
+{% block content_title %}
 <h2>All articles</h2>
-{% endblock %} -->
+{% endblock %}
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
+<script src="sketch.js"></script>
 
 <!-- <ol id="post-list">
 {% for article in articles_page.object_list %}
@@ -17,11 +19,13 @@
                         <a class="url fn" href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a>
                     {% endfor %}
                     </address>
-                </footer><!-- /.post-info -->
-                <div class="entry-content"> {{ article.summary }} </div><!-- /.entry-content -->
-        </article></li>
-{% endfor %}
-</ol> -->
+                </footer> -->
+                <!-- /.post-info -->
+                <!-- <div class="entry-content"> {{ article.summary }} </div> -->
+                <!-- /.entry-content -->
+        <!-- </article></li> -->
+<!-- {% endfor %} -->
+<!-- </ol> -->
 <!-- /#posts-list -->
 {% if articles_page.has_other_pages() %}
     {% include 'pagination.html' %}
