--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 <section id="content">
 {% block content_title %}
-<h2>All articles</h2>
+<!-- <h2>All articles</h2> -->
 {% endblock %}
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
