--- a/theme/templates/category.html
+++ b/theme/templates/category.html
@@ -5,4 +5,18 @@
 {% block content_title %}
 <h2>Articles in the {{ category }} category</h2>
 {% endblock %}
+<ol id="post-list">
+{% for article in articles %}
+        <li><article class="hentry">
+                <header> <h2 class="entry-title"><a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h2> </header>
+                <footer class="post-info">
+                    <time class="published" datetime="{{ article.date.isoformat() }}"> {{ article.locale_date }} </time>
+                </footer> -->
+                <!-- /.post-info -->
+                <div class="entry-content"> {{ article.summary }} </div>
+                <!-- /.entry-content -->
+        </article></li>
+<!-- {% endfor %} -->
+</ol>
+<!-- /#posts-list
 
