--- a/theme/templates/category.html
+++ b/theme/templates/category.html
@@ -2,13 +2,10 @@
 
 {% block title %}{{ SITENAME }} - {{ category }} category{% endblock %}
 
-{% block content_title %}
-<h2>Testimonios</h2>
-{% endblock %}
 {% block content %}
+<h1>Testimonio</h1>
 <ul>
 {% for article in articles %}
-    
     <li><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></li>
 {% endfor %}
 </ul>
