try change position of p5.js sketch and add cache settings

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 <section id="content">
-{% block content_title %}
-<!-- <h2>All articles</h2> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
 <script src="sketch.js"></script>
+{% block content_title %}
+<!-- <h2>All articles</h2> -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script> -->
+<!-- <script src="sketch.js"></script> -->
 {% endblock %}
 
 <!-- <ol id="post-list">
