--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -4,9 +4,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
 <script src="sketch.js"></script>
 {% block content_title %}
-<!-- <h2>All articles</h2> -->
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script> -->
-<!-- <script src="sketch.js"></script> -->
+<!-- <h2>All articles</h2> -->s
 {% endblock %}
 
 <!-- <ol id="post-list">
