--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -37,3 +37,10 @@ pre {
     margin: 2em 1em 2em 4em;
 }
 
+/* images are centered and half size of the width */
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
