--- a/theme/templates/category.html
+++ b/theme/templates/category.html
@@ -7,6 +7,7 @@
 <ul>
 {% for article in articles %}
     <li><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></li>
+    <li>probando nueva funcionalidad</li>
 {% endfor %}
 </ul>
 {% endblock %}
