--- a/theme/templates/category.html
+++ b/theme/templates/category.html
@@ -9,7 +9,7 @@
   <ul>
     {% for article in articles %}
         <li><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></li>
-        <li>{{ SITEURL }}/images/{{ article.galleryimage}}</li>
+        <li><img src="{{ SITEURL }}/images/{{ article.galleryimage }}"></li>
     {% endfor %}
     </ul>
 </div>
