--- a/theme/templates/category.html
+++ b/theme/templates/category.html
@@ -8,9 +8,11 @@
 <div>
   <ul>
     {% for article in articles %}
-        <a href="{{ SITEURL }}/{{ article.url }}">
-          <img src="{{ SITEURL }}/images/{{ article.galleryimage }}">
-        {{ article.title }}</a>
+    <div class = "testimonio">
+      <a href="{{ SITEURL }}/{{ article.url }}">
+      <img src="{{ SITEURL }}/images/{{ article.galleryimage }}">
+      {{ article.title }}</a>
+    </div>
     {% endfor %}
     </ul>
 </div>
