--- a/theme/templates/category.html
+++ b/theme/templates/category.html
@@ -3,7 +3,7 @@
 {% block title %}{{ SITENAME }} - {{ category }} category{% endblock %}
 
 {% block content %}
-<h1>Testimonio</h1>
+<h1>Testimonios</h1>
 
 <div>
   <ul>
