--- a/output/theme/css/style.css
+++ b/output/theme/css/style.css
@@ -54,3 +54,21 @@ img {
   color: #000;
   text-decoration: none;
 }
+
+a.project h3 {
+  margin: 0;
+  font-size: 1em;
+}
+
+.project img {
+  width: 100%;
+  border-radius: 10%;
+  border: 1px solid #000;
+}
+
+  /* For mobile phones: */
+  @media only screen and (max-width: 768px) {
+    .project {
+        width: 100%;
+    }
+  }
