--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -48,6 +48,7 @@ img {
 /* testimonio class for divs with images */
 .testimonio {
   /* width: 33.33%; */
+  width: 100%;
   float: left;
   padding: 10px;
   display: block;
@@ -66,9 +67,9 @@ a.project h3 {
   border: 1px solid #000;
 }
 
-  /* For mobile phones: */
-  @media only screen and (max-width: 768px) {
+/* For mobile phones: */
+/* @media only screen and (max-width: 768px) {
     .project {
         width: 100%;
-    }
   }
+} */
