--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -56,9 +56,14 @@ img {
   text-decoration: none;
 }
 
+
 a.project h3 {
   margin: 0;
   font-size: 1em;
+}
+
+a.project {
+  margin: auto;
 }
 
 .project img {
@@ -66,6 +71,8 @@ a.project h3 {
   border-radius: 10%;
   border: 1px solid #000;
 }
+
+.project a
 
 /* For mobile phones: */
 /* @media only screen and (max-width: 768px) {
