agregar img de header a base.html

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -42,6 +42,7 @@
 <body id="index" class="home">
         <header id="banner" class="body">
                 <h1><a href="{{ SITEURL }}/">{{ SITENAME }}{% if SITESUBTITLE %} <strong>{{ SITESUBTITLE }}</strong>{% endif %}</a></h1>
+                <img src="./assets/header.png">
         </header><!-- /#banner -->
         <nav id="menu"><ul>
         {% for title, link in MENUITEMS %}
