--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -41,7 +41,7 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="{{ SITEURL }}/">{{ SITENAME }}{% if SITESUBTITLE %} <strong>{{ SITESUBTITLE }}</strong>{% endif %}</a></h1>
+                <!-- <h1><a href="{{ SITEURL }}/">{{ SITENAME }}{% if SITESUBTITLE %} <strong>{{ SITESUBTITLE }}</strong>{% endif %}</a></h1> -->
                 <img src="./assets/header.png">
         </header><!-- /#banner -->
         <nav id="menu"><ul>
