agregar SITEURL a path de banner para hacerlo absoluto

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -42,7 +42,7 @@
 <body id="index" class="home">
         <header id="banner" class="body">
                 <!-- <h1><a href="{{ SITEURL }}/">{{ SITENAME }}{% if SITESUBTITLE %} <strong>{{ SITESUBTITLE }}</strong>{% endif %}</a></h1> -->
-                <a href="{{ SITEURL }}/"><img src="assets/header.png"></a>
+                <a href="{{ SITEURL }}/"><img src="{{ SITEURL }}/assets/header.png"></a>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
         {% for title, link in MENUITEMS %}
