--- a/theme/templates/category.html
+++ b/theme/templates/category.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ SITENAME }} - {{ category }} category{% endblock %}
+{% block title %}{{ SITENAME }} - {{ category }}{% endblock %}
 
 {% block content %}
 <h1>Testimonios</h1>
