--- a/output/theme/css/style.css
+++ b/output/theme/css/style.css
@@ -54,8 +54,8 @@ img {
   display: block;
   color: #000;
   text-decoration: none;
+  text-align: center;
 }
-
 
 a.project h3 {
   margin: 0;
@@ -71,12 +71,3 @@ a.project {
   border-radius: 10%;
   border: 1px solid #000;
 }
-
-.project a
-
-/* For mobile phones: */
-/* @media only screen and (max-width: 768px) {
-    .project {
-        width: 100%;
-  }
-} */
