--- a/output/theme/css/style.css
+++ b/output/theme/css/style.css
@@ -1,7 +1,8 @@
 body {
   font-family: monospace;
   font-size: 100%;
-  background-color: white;
+  /* background-color: white; */
+  background-image: url("assets/background.png");
   color: #111;
   width: 80%;
   min-width: 400px;
