cambiar background image

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -39,7 +39,8 @@
         {% endblock head %}
 </head>
 
-<body id="index" class="home">
+<body id="index" class="home" style="background-image: url('{{ SITEURL }}/assets/background.png');">
+  
         <header id="banner" class="body">
                 <!-- <h1><a href="{{ SITEURL }}/">{{ SITENAME }}{% if SITESUBTITLE %} <strong>{{ SITESUBTITLE }}</strong>{% endif %}</a></h1> -->
                 <a href="{{ SITEURL }}/"><img src="{{ SITEURL }}/assets/header.png"></a>
