agregar css de cover

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -39,7 +39,7 @@
         {% endblock head %}
 </head>
 
-<body id="index" class="home" style="background-image: url('{{ SITEURL }}/assets/background.png'); background-repeat: no-repeat;">
+<body id="index" class="home" style="background-image: url('{{ SITEURL }}/assets/background.png'); background-repeat: no-repeat; background-size: cover">
   
         <header id="banner" class="body">
                 <!-- <h1><a href="{{ SITEURL }}/">{{ SITENAME }}{% if SITESUBTITLE %} <strong>{{ SITESUBTITLE }}</strong>{% endif %}</a></h1> -->
