--- a/output/theme/css/style.css
+++ b/output/theme/css/style.css
@@ -9,13 +9,13 @@ body {
   /* background-image: url("{{ SITEURL }}/assets/background.png"); */
   /* background-repeat: no-repeat; */
   color: #111;
-  width: 80%;
+  /* width: 80%; */
   min-width: 400px;
   min-height: 200px;
   padding: 1em;
-  margin: 5% 10%;
-  border: thin solid gray;
-  border-radius: 5px;
+  /* margin: 5% 10%; */
+  /* border: thin solid gray; */
+  /* border-radius: 5px; */
   display: block;
 }
 
