--- a/output/theme/css/style.css
+++ b/output/theme/css/style.css
@@ -19,13 +19,13 @@ body {
   display: block;
 }
 
-/* a:link    { color: blue; text-decoration: none;      } */
-/* a:hover   { color: blue; text-decoration: underline; } */
-/* a:visited { color: blue;                             } */
+a:link    { color: blue; text-decoration: none;      }
+a:hover   { color: blue; text-decoration: underline; }
+a:visited { color: blue;                             }
 
-a:link    { color: white; text-decoration: none;      }
-a:hover   { color: white; text-decoration: underline; }
-a:visited { color: white;                             }
+/* a:link    { color: white; text-decoration: none;      } */
+/* a:hover   { color: white; text-decoration: underline; } */
+/* a:visited { color: white;                             } */
 
 h1 a { color: inherit !important }
 h2 a { color: inherit !important }
@@ -40,8 +40,11 @@ h6 a { color: inherit !important }
 
 #menu li {
     display: inline;
-
 }
+
+#menu a:link    {color: white; text-decoration: none; }
+#menu a:hover   { color: white; text-decoration: underline; }
+#menu a:visited { color: white; 
 
 #post-list {
     margin-bottom: 1em;
