--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -89,3 +89,9 @@ a.project {
   border-radius: 10%;
   border: 1px solid #000;
 }
+
+/* tituloPagina class for titles of every website */
+tituloPagina {
+  text-align: center;
+  text-transform: uppercase;
+}
