--- a/theme/templates/page.html
+++ b/theme/templates/page.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-    <h1>{{ page.title }}</h1>
+    <h1 class="tituloPagina">{{ page.title }}</h1>
     {% import 'translations.html' as translations with context %}
     {{ translations.translations_for(page) }}
 
