--- a/theme/templates/category.html
+++ b/theme/templates/category.html
@@ -8,7 +8,7 @@
 <div>
   <ul>
     {% for article in articles %}
-    <div class = "testimonio">
+    <div class = "testimonio" class="tituloPagina">
       <a href="{{ SITEURL }}/{{ article.url }}"><img src="{{ SITEURL }}/images/{{ article.galleryimage }}"></a>
       <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a>
     </div>
