--- a/theme/templates/testimonios.html
+++ b/theme/templates/testimonios.html
@@ -1,47 +1,19 @@
 {% extends "base.html" %}
-{% block html_lang %}{{ article.lang }}{% endblock %}
 
-{% block title %}{{ SITENAME }} - {{ article.title|striptags  }}{% endblock %}
-
-{% block head %}
-  {{ super() }}
-
-  {% import 'translations.html' as translations with context %}
-  {% if translations.entry_hreflang(article) %}
-    {{ translations.entry_hreflang(article) }}
-  {% endif %}
-
-  {% if article.description %}
-    <meta name="description" content="{{article.description}}" />
-  {% endif %}
-
-  {% for tag in article.tags %}
-    <meta name="tags" content="{{tag}}" />
-  {% endfor %}
-
-{% endblock %}
+{% block title %}{{ SITENAME }} - {{ category|capitalize }}{% endblock %}
 
 {% block content %}
-<section id="content" class="body">
-  <header>
-    <h2 class="entry-title">
-      <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"
-         title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h2>
- {% import 'translations.html' as translations with context %}
- {{ translations.translations_for(article) }}
-  </header>
-  <footer class="post-info">
-    {% if article.tags %}
-    <div class="tags">
-        Tags:
-        {% for tag in article.tags %}
-            <a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>
-        {% endfor %}
+<h1 class="tituloPagina">Testimonios</h1>
+
+<div>
+  <ul>
+    {% for article in articles %}
+    <div class = "testimonio">
+      <a href="{{ SITEURL }}/{{ article.url }}"><img class="testimonioImagen" src="{{ SITEURL }}/images/{{ article.galleryimage }}"></a>
+      <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a>
     </div>
-    {% endif %}
-  </footer><!-- /.post-info -->
-  <div class="entry-content">
-    {{ article.content }}
-  </div><!-- /.entry-content -->
-</section>
+    {% endfor %}
+    </ul>
+</div>
+
 {% endblock %}
