--- a/theme/templates/testimonios.html
+++ b/theme/templates/testimonios.html
@@ -8,10 +8,12 @@
 <div>
   <ul>
     {% for article in articles %}
+    {% if category == "testimonios" %}
     <div class = "testimonio">
       <a href="{{ SITEURL }}/{{ article.url }}"><img class="testimonioImagen" src="{{ SITEURL }}/images/{{ article.galleryimage }}"></a>
       <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a>
     </div>
+    {% endif %}
     {% endfor %}
     </ul>
 </div>
