agregar logica reflexiones

--- a/theme/templates/reflexiones.html
+++ b/theme/templates/reflexiones.html
@@ -8,10 +8,12 @@
 <div>
   <ul>
     {% for article in articles %}
+    {% if category == "reflexiones" %}
     <div class = "reflexion">
       <a href="{{ SITEURL }}/{{ article.url }}"><img class="reflexionImagen" src="{{ SITEURL }}/images/{{ article.galleryimage }}"></a>
       <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a>
     </div>
+    {% endif %}
     {% endfor %}
     </ul>
 </div>
