--- a/theme/templates/testimonios.html
+++ b/theme/templates/testimonios.html
@@ -8,7 +8,7 @@
 <div>
   <ul>
     {% for article in articles %}
-    {% if category == "testimonios" %}
+    {% if tag == "testimonios" %}
     <div class = "testimonio">
       <a href="{{ SITEURL }}/{{ article.url }}"><img class="testimonioImagen" src="{{ SITEURL }}/images/{{ article.galleryimage }}"></a>
       <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a>
